Add notification for users

--- a/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
+++ b/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
@@ -43,8 +43,12 @@
 
         <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal"
                     HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button Content="{loc:Loc Refresh}" FontSize="14" Width="100" Command="{Binding RefreshCommand}"
+            <StackPanel>
+                <Button Content="{loc:Loc Refresh}" FontSize="14" Width="100" Command="{Binding RefreshCommand}"
                         Foreground="CadetBlue" Style="{StaticResource showButton}"/>
+                <TextBlock Text="You can't inspect this combat because it hasn't been uploaded." Margin="5"
+                           Visibility="{Binding CombatIsNotLoaded, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"/>
+            </StackPanel>
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" 
                        Text="{loc:Loc Title}" FontSize="18" FontWeight="Bold"
                        Margin="100 0" Style="{StaticResource titleText}"/>
