--- a/src/CombatAnalysis.App/Views/Chat/ChatView.xaml
+++ b/src/CombatAnalysis.App/Views/Chat/ChatView.xaml
@@ -9,7 +9,9 @@
     xmlns:loc="clr-namespace:CombatAnalysis.App.Localizations"
     xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.Chat"
     xmlns:uc="clr-namespace:CombatAnalysis.App.UserControls"
+    xmlns:chat="clr-namespace:CombatAnalysis.App.Views.Chat"
     xmlns:local="clr-namespace:CombatAnalysis.App.Views.ViewTemplates"
+    xmlns:chatViewModels="clr-namespace:CombatAnalysis.Core.ViewModels.Chat;assembly=CombatAnalysis.Core"
     xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
     xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
@@ -170,250 +172,29 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel Grid.Column="3" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right"
-                    Orientation="Horizontal" Panel.ZIndex="1">
-            <Border VerticalAlignment="Top" Margin="0 5 10 0" Panel.ZIndex="2" 
-                    Background="LightGray" Width="250" Height="130" Padding="10 0" CornerRadius="10"
-                    Visibility="{Binding InviteToGroupChatIsVisibly, Converter={StaticResource BoolToVisibility}, ConverterParameter='true:false'}">
-                <StackPanel Orientation="Horizontal">
-                    <StackPanel Width="200" Margin="0 20">
-                        <ComboBox Height="30" Padding="5" IsEditable="True" StaysOpenOnEdit="True" ItemsSource="{Binding UsersForInviteToGroupChat}"
-                                  SelectedIndex="{Binding SelectedUsersForInviteToGroupChatIndex}" DisplayMemberPath="Email"
-                                  Text="{Binding InputedUserEmailForInviteToGroupChat}"/>
-                        <TextBlock Text="{loc:Loc UserAdded}" HorizontalAlignment="Center" Margin="0 3" Foreground="Green"
-                                   Visibility="{Binding AddUserToGroupChatResponse, Converter={StaticResource IntToVisibility}, ConverterParameter='true:2:='}"/>
-                        <TextBlock Text="{loc:Loc UserAddFailed}" HorizontalAlignment="Center" Margin="0 3" Foreground="Red"
-                                   Visibility="{Binding AddUserToGroupChatResponse, Converter={StaticResource IntToVisibility}, ConverterParameter='true:3:='}"/>
-                        <Button Content="{loc:Loc Add}" Style="{StaticResource showButton}" Margin="10" Cursor="Hand"
-                                IsEnabled="{Binding SelectedUsersForInviteToGroupChatIndex, Converter={StaticResource IntToXAMLBool}, ConverterParameter='0:>='}"
-                                mvx:Bi.nd="Command InviteToGroupChatCommand" />
-                    </StackPanel>
-                    <Button Style="{StaticResource textBoxButton}" mvx:Bi.nd="Command CloseInviteToGroupChatCommand" VerticalAlignment="Top">
-                        <Button.ToolTip>
-                            <ToolTip>
-                                Закрыть
-                            </ToolTip>
-                        </Button.ToolTip>
-                        <Icon:PackIconMaterial Foreground="Red" Kind="Close"/>
-                    </Button>
-                </StackPanel>
-            </Border>
-            <Border Background="LightGray" Width="175" Height="110" Margin="0 5 75 0" Padding="10" CornerRadius="10"
-                Visibility="{Binding GroupChatMenuIsVisibly, Converter={StaticResource BoolToVisibility}, ConverterParameter='true:false'}">
-                <StackPanel>
-                    <Button Margin="5" Background="Transparent" BorderThickness="0" mvx:Bi.nd="Command OpenInviteToGroupChatCommand">
-                        <TextBlock Text="{loc:Loc AddUser}"/>
-                    </Button>
-                    <Button Margin="5" Background="Transparent" BorderThickness="0">
-                        <TextBlock Text="{loc:Loc Settings}"/>
-                    </Button>
-                    <Button Margin="5" Background="Transparent" BorderThickness="0">
-                        <TextBlock  Text="{loc:Loc RemoveUser}"/>
-                    </Button>
-                </StackPanel>
-            </Border>
-        </StackPanel>
-
         <Border CornerRadius="15" Background="WhiteSmoke" Grid.Column="3" Grid.Row="1" Grid.RowSpan="3" 
                 Margin="0 -10 30 30" ClipToBounds="True">
             <Grid>
                 <TextBlock Name="choiceChat" VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc SelectChatForTalking}"
-                           FontSize="18" FontStyle="Italic" Visibility="{Binding SelectedMyGroupChatIndex, Converter={StaticResource IntToVisibility}, ConverterParameter='true:-1:='}"/>
-                <Grid Visibility="{Binding SelectedMyGroupChatIndex, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>='}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-                    
-                    <Grid>
-                        <Grid.Effect>
-                            <DropShadowEffect BlurRadius="20" ShadowDepth="1" Direction="-90" Opacity="0.1"/>
-                        </Grid.Effect>
+                           FontSize="18" FontStyle="Italic"/>
 
-                        <TextBlock Text="{Binding SelectedChatName}" FontSize="16" Margin="20 15" HorizontalAlignment="Left"/>
-
-                        <StackPanel Orientation="Horizontal" Margin="0 0 10 0" HorizontalAlignment="Right">
-                            <!--<TextBlock Text="and 3 others" VerticalAlignment="Center" Margin="7 0" Foreground="#8b8a8f" FontSize="11" />-->
-
-                            <Button Style="{StaticResource textBoxButton}" mvx:Bi.nd="Command ShowGroupChatMenuCommand">
-                                <Icon:PackIconMaterial Kind="DotsVertical" Width="14" Height="14" Foreground="#88878e"/>
-                            </Button>
-                        </StackPanel>
-                    </Grid>
-
-                    <TextBlock Name="myUsername" Text="{Binding MyAccount.Email}" Visibility="Collapsed"/>
-                    <ScrollViewer Grid.Row="1">
-                        <ListBox HorizontalContentAlignment="Stretch" Margin="0" ItemsSource="{Binding GroupChatMessages}" IsEnabled="False" Background="Transparent">
-                            <ListBox.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid>
-                                        <!--<uc:ChatSeparator Title="{Binding Path=DayTimeType, Converter={StaticResource WhenTypeToString}}"/>-->
-                                        <StackPanel>
-                                            <StackPanel.Visibility>
-                                                <MultiBinding Converter="{StaticResource MultiplyToVisibility}" ConverterParameter="true">
-                                                    <Binding Path="Username" />
-                                                    <Binding ElementName="myUsername" Path="Text" />
-                                                </MultiBinding>
-                                            </StackPanel.Visibility>
-
-                                            <uc:UserChat UserName="{Binding Path=Username}"/>
-                                            <uc:MessageChat Color="#ff82a3" Message="{Binding Path=Message}"/>
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm}" Style="{StaticResource timeText}"/>
-                                            </StackPanel>
-                                        </StackPanel>
-
-                                        <StackPanel>
-                                            <StackPanel.Visibility>
-                                                <MultiBinding Converter="{StaticResource MultiplyToVisibility}">
-                                                    <Binding Path="Username" />
-                                                    <Binding ElementName="myUsername" Path="Text" />
-                                                </MultiBinding>
-                                            </StackPanel.Visibility>
-
-                                            <uc:MyMessageChat Message="{Binding Path=Message}"/>
-                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm}" Style="{StaticResource timeTextRight}"/>
-                                            </StackPanel>
-                                        </StackPanel>
-                                    </Grid>
-                                </DataTemplate>
-                            </ListBox.ItemTemplate>
-                        </ListBox>
-                    </ScrollViewer>
-
-                    <Grid Grid.Row="2" Margin="10 0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-
-                        <Grid>
-                            <TextBlock Margin="15 0 120 0" VerticalAlignment="Center" Foreground="#868686" Panel.ZIndex="1"
-                                   IsHitTestVisible="False" Text="{loc:Loc TypeMessage}" Visibility="{Binding ElementName=txtMessage, Path=Text.IsEmpty, Converter={StaticResource BoolToVisibility}}"/>
-                            <TextBox Name="txtMessage" Style="{StaticResource messageTextBox}" Text="{Binding Message}"/>
-
-                            <StackPanel Orientation="Horizontal" Margin="0 0 8 0" HorizontalAlignment="Right" VerticalAlignment="Center">
-                                <Button Style="{StaticResource textBoxButton}" ToolTip="{loc:Loc Copy}">
-                                    <Icon:PackIconMaterial Kind="BookmarkCheckOutline" Foreground="#a6a6a6"/>
-                                </Button>
-                                <Button Style="{StaticResource textBoxButton}" ToolTip="{loc:Loc AttachDocument}">
-                                    <Icon:PackIconMaterial Kind="Paperclip" Foreground="#a6a6a6"/>
-                                </Button>
-                                <Button Style="{StaticResource textBoxButton}" ToolTip="{loc:Loc CreateVoiceMessage}">
-                                    <Icon:PackIconMaterial Kind="Microphone" Foreground="#a6a6a6"/>
-                                </Button>
-                            </StackPanel>
-                        </Grid>
-
-                        <Button Grid.Column="1" Margin="5 0 0 0" Style="{StaticResource textBoxButton}" Command="{Binding SendGroupMessageCommand}" ToolTip="{loc:Loc SendMessage}">
-                            <Icon:PackIconMaterial Kind="Send" Margin="3 0 0 2" Width="16" Foreground="#6f59d4">
-                                <Icon:PackIconMaterial.LayoutTransform>
-                                    <RotateTransform Angle="-45"/>
-                                </Icon:PackIconMaterial.LayoutTransform>
-                            </Icon:PackIconMaterial>
-                        </Button>
-                    </Grid>
-                </Grid>
-
-                <Grid Visibility="{Binding SelectedPersonalChatIndex, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>='}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid>
-                        <Grid.Effect>
-                            <DropShadowEffect BlurRadius="20" ShadowDepth="1" Direction="-90" Opacity="0.1"/>
-                        </Grid.Effect>
-
-                        <TextBlock Text="{Binding SelectedChatName}" FontSize="16" Margin="20 15" HorizontalAlignment="Left"/>
-
-                        <!--<StackPanel Orientation="Horizontal" Margin="0 0 10 0" HorizontalAlignment="Right">
-                            <TextBlock Text="and 3 others" VerticalAlignment="Center" Margin="7 0" Foreground="#8b8a8f" FontSize="11" />
-
-                            <Button Style="{StaticResource textBoxButton}" mvx:Bi.nd="Command ShowGroupChatMenuComand">
-                                <Icon:PackIconMaterial Kind="DotsVertical" Width="14" Height="14" Foreground="#88878e"/>
-                            </Button>
-                        </StackPanel>-->
-                    </Grid>
-
-                    <TextBlock Name="myUsername1" Text="{Binding MyAccount.Email}" Visibility="Collapsed"/>
-                    <ScrollViewer Grid.Row="1">
-                        <ListBox HorizontalContentAlignment="Stretch" Margin="0" ItemsSource="{Binding PersonalChatMessages}" IsEnabled="False" Background="Transparent">
-                            <ListBox.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid>
-                                        <!--<uc:ChatSeparator Title="{Binding Path=DayTimeType, Converter={StaticResource WhenTypeToString}}"/>-->
-                                        <StackPanel>
-                                            <StackPanel.Visibility>
-                                                <MultiBinding Converter="{StaticResource MultiplyToVisibility}" ConverterParameter="true">
-                                                    <Binding Path="Username" />
-                                                    <Binding ElementName="myUsername1" Path="Text" />
-                                                </MultiBinding>
-                                            </StackPanel.Visibility>
-
-                                            <uc:UserChat UserName="{Binding Path=Username}"/>
-                                            <uc:MessageChat Color="#ff82a3" Message="{Binding Path=Message}"/>
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm}" Style="{StaticResource timeText}"/>
-                                            </StackPanel>
-                                        </StackPanel>
-
-                                        <StackPanel>
-                                            <StackPanel.Visibility>
-                                                <MultiBinding Converter="{StaticResource MultiplyToVisibility}">
-                                                    <Binding Path="Username" />
-                                                    <Binding ElementName="myUsername" Path="Text" />
-                                                </MultiBinding>
-                                            </StackPanel.Visibility>
-
-                                            <uc:MyMessageChat Message="{Binding Path=Message}"/>
-                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm}" Style="{StaticResource timeTextRight}"/>
-                                            </StackPanel>
-                                        </StackPanel>
-                                    </Grid>
-                                </DataTemplate>
-                            </ListBox.ItemTemplate>
-                        </ListBox>
-                    </ScrollViewer>
-
-                    <Grid Grid.Row="2" Margin="10 0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-
-                        <Grid>
-                            <TextBlock Margin="15 0 120 0" VerticalAlignment="Center" Foreground="#868686" Panel.ZIndex="1"
-                                   IsHitTestVisible="False" Text="{loc:Loc TypeMessage}" Visibility="{Binding ElementName=txt1Message, Path=Text.IsEmpty, Converter={StaticResource BoolToVisibility}}"/>
-                            <TextBox Name="txt1Message" Style="{StaticResource messageTextBox}" Text="{Binding Message}"/>
-
-                            <StackPanel Orientation="Horizontal" Margin="0 0 8 0" HorizontalAlignment="Right" VerticalAlignment="Center">
-                                <Button Style="{StaticResource textBoxButton}" ToolTip="{loc:Loc Copy}">
-                                    <Icon:PackIconMaterial Kind="BookmarkCheckOutline" Foreground="#a6a6a6"/>
-                                </Button>
-                                <Button Style="{StaticResource textBoxButton}" ToolTip="{loc:Loc AttachDocument}">
-                                    <Icon:PackIconMaterial Kind="Paperclip" Foreground="#a6a6a6"/>
-                                </Button>
-                                <Button Style="{StaticResource textBoxButton}" ToolTip="{loc:Loc CreateVoiceMessage}">
-                                    <Icon:PackIconMaterial Kind="Microphone" Foreground="#a6a6a6"/>
-                                </Button>
-                            </StackPanel>
-                        </Grid>
-
-                        <Button Grid.Column="1" Margin="5 0 0 0" Style="{StaticResource textBoxButton}" Command="{Binding SendPersonalMessageCommand}" ToolTip="{loc:Loc SendMessage}">
-                            <Icon:PackIconMaterial Kind="Send" Margin="3 0 0 2" Width="16" Foreground="#6f59d4">
-                                <Icon:PackIconMaterial.LayoutTransform>
-                                    <RotateTransform Angle="-45"/>
-                                </Icon:PackIconMaterial.LayoutTransform>
-                            </Icon:PackIconMaterial>
-                        </Button>
-                    </Grid>
-                </Grid>
+                <ContentControl Visibility="{Binding SelectedMyGroupChatIndex, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>='}"
+                                Content="{Binding GroupChatMessagesTemplate}">
+                    <ContentControl.Resources>
+                        <DataTemplate DataType="{x:Type chatViewModels:GroupChatMessagesViewModel}">
+                            <chat:GroupChatMessagesView />
+                        </DataTemplate>
+                    </ContentControl.Resources>
+                </ContentControl>
+                
+                <ContentControl Visibility="{Binding SelectedPersonalChatIndex, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>='}"
+                                Content="{Binding PersonalChatMessagesTemplate}">
+                    <ContentControl.Resources>
+                        <DataTemplate DataType="{x:Type chatViewModels:PersonalChatMessagesVewModel}">
+                            <chat:PersonalChatMessagesVew />
+                        </DataTemplate>
+                    </ContentControl.Resources>
+                </ContentControl>
             </Grid>
         </Border>
     </Grid>
