--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/chats/chats.scss
@@ -37,14 +37,20 @@
     }
 
     &__my-chats {
+        max-width: 25%;
+        overflow: hidden;
+
         ul {
             padding: 0;
         }
 
         &__group-chats, &__personal-chats {
             .last-message {
-                margin: 5px 0;
+                margin: 10px;
+                max-height: 25px;
                 font-style: italic;
+                overflow: hidden;
+                word-wrap: break-word;
             }
         }
 
@@ -126,6 +132,12 @@
                 margin: 0 10px;
                 width: 25px;
                 height: 25px;
+                cursor: pointer;
+
+                :hover {
+                    transform: scale(1.1);
+                    color: cornflowerblue;
+                }
             }
         }
     }
@@ -133,6 +145,7 @@
 
 .personal-chat-messages, .group-chat-messages {
     padding: 7px;
+    overflow-y: scroll;
 
     &__right {
         flex-direction: row;
@@ -178,6 +191,10 @@
             border-radius: 25px;
             text-align: center;
             margin: 5px;
+            overflow-x: hidden;
+            word-wrap: break-word;
+            max-width: 75%;
+            text-align: left;
         }
     }
 
