--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats.scss
@@ -1,28 +1,4 @@
-﻿.search {
-    display: flex;
-    flex-direction: row;
-
-    &__search-people, &__search-groups {
-        display: flex;
-        flex-direction: row;
-        justify-content: start;
-        align-items: center;
-        margin: 15px;
-        width: 375px;
-
-        &_name {
-            margin: 5px;
-            width: 200px;
-        }
-
-        svg {
-            margin: 0 15px;
-            cursor: pointer;
-        }
-    }
-}
-
-.chats {
+﻿.chats {
     display: flex;
     flex-direction: row;
     align-items: start;
@@ -38,13 +14,40 @@
 
     &__my-chats {
         max-width: 25%;
-        overflow: hidden;
+
+        &_title {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            min-width: 200px;
+
+            .main-content {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                div {
+                    margin-right: 15px;
+                }
+            }
+
+            svg {
+                cursor: pointer;
+            }
+
+            .create {
+                width: 20px;
+                height: 20px;
+            }
+        }
 
         ul {
             padding: 0;
         }
 
         &__group-chats, &__personal-chats {
+            overflow: hidden;
+
             .last-message {
                 margin: 10px;
                 max-height: 25px;
@@ -64,7 +67,7 @@
     }
 
     &__messages {
-        width: 50%;
+        width: 100%;
         margin: 0px 25px;
 
         .title {
@@ -204,6 +207,38 @@
         &-active {
             color: orange;
             transform: scale(1.2);
+        }
+    }
+}
+
+.create-group-chat {
+    display: none;
+
+    &_active {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 15%;
+        right: 30%;
+        width: 500px;
+        height: 450px;
+        border-radius: 25px;
+        box-shadow: 5px 5px 5px 5px gray;
+        background: white;
+
+        .chat-policy {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    &__accept {
+        margin: 10px;
+
+        input {
+            margin: 5px;
         }
     }
 }
