--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/groupChat.scss
@@ -1,46 +1,44 @@
-﻿.chats__messages {
-    .settings {
-        display: none;
+﻿.chats__messages .settings {
+    display: none;
 
-        &-active {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: start;
+    &-active {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
 
-            svg {
-                cursor: pointer;
-                margin: 5px 15px;
+        svg {
+            cursor: pointer;
+            margin: 5px 15px;
+        }
+
+        .people-inspection {
+            display: none;
+
+            &-active {
+                display: flex;
+                flex-direction: column;
+                position: absolute;
+                border: 3px solid gray;
+                border-radius: 10px;
+                background: white;
+                padding: 10px;
+                margin: 40px;
             }
+        }
 
-            .people-inspection {
-                display: none;
+        .people-inspection-handler {
+            color: black;
 
-                &-active {
-                    display: flex;
-                    flex-direction: column;
-                    position: absolute;
-                    border: 3px solid gray;
-                    border-radius: 10px;
-                    background: white;
-                    padding: 10px;
-                    margin: 40px;
-                }
+            &-active {
+                color: lightgreen;
+                transform: scale(1.2);
             }
+        }
 
-            .people-inspection-handler {
-                color: black;
-
-                &-active {
-                    color: lightgreen;
-                    transform: scale(1.2);
-                }
-            }
-
-            .leave-from-chat {
-                color: red;
-                transform: scale(1.4);
-            }
+        .leave-from-chat {
+            color: red;
+            transform: scale(1.4);
         }
     }
 }
