--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -7,22 +7,27 @@
         flex-direction: column;
         justify-content: start;
         margin: 10px;
-        width: 10%;
-
-        div:hover {
-            cursor: pointer;
-            transform: scale(1.1);
-            color: yellowgreen;
-        }
+        width: 15%;
 
         .menu-item {
             display: flex;
             flex-direction: row;
             justify-content: start;
             align-items: center;
-            
+
+            div:hover {
+                cursor: pointer;
+                transform: scale(1.1);
+                color: yellowgreen;
+            }
+
             div {
                 margin: 10px;
+            }
+
+            &_disabled div {
+                margin: 10px;
+                opacity: 0.5;
             }
         }
     }
