--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment.scss
@@ -1,7 +1,25 @@
 .my-environment {
+    display: flex;
+    flex-direction: row;
+
     &__menu {
         li {
+            display: flex;
+            align-items: center;
             margin: 20px 10px;
+            padding: 10px;
+            width: 200px;
+
+            svg {
+                margin-right: 10px;
+                color: green;
+            }
+        }
+
+        li:hover {
+            box-shadow: 5px 5px 5px 5px gray;
+            border-radius: 10px;
+            cursor: pointer;
         }
     }
 }
