--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people.scss
@@ -11,4 +11,14 @@
             }
         }
     }
+
+
+    &__successfully-request {
+        margin: 10px;
+        padding: 10px;
+        width: 425px;
+        text-align: center;
+        border-radius: 20px;
+        border: 3px solid green;
+    }
 }
