--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myFeed.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myFeed.scss
@@ -13,6 +13,16 @@
 }
 
 .post {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .card {
+        width: 575px;
+        margin: 5px;
+    }
+
     &__reaction.list-group-item {
         display: flex;
         flex-direction: row;
@@ -43,5 +53,34 @@
         &_dislike:hover {
             border: 2px solid yellow;
         }
+    }
+}
+
+.post-comment {
+    display: flex;
+    flex-direction: column;
+
+    .card {
+        width: 475px;
+        margin: 5px 0 5px 75px;
+    }
+}
+
+.add-new-comment {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+
+    button {
+        width: 100px;
+        margin: 5px;
+    }
+
+    &__title {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        width: 100%;
+        margin: 5px -15px;
     }
 }
