Add notification if collections empty

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/friends.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/friends.scss
@@ -1,4 +1,8 @@
 .friends {
+    &__empty {
+        opacity: 0.5;
+    }
+
     .tabs {
         display: flex;
         flex-direction: column;
@@ -31,7 +35,7 @@
         flex-direction: row;
         align-items: center;
 
-        &__remove {
+        &__remove, &__details {
             margin: 0 15px;
 
             svg {
@@ -40,10 +44,8 @@
             }
 
             svg:hover {
-                transform: scale(1.25);
                 cursor: pointer;
-                border: 3px solid yellow;
-                box-shadow: 3px 3px 3px gray;
+                transform: scale(1.25);
             }
         }
     }
