--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communities.scss
@@ -1,31 +1,6 @@
 .communities {
     display: flex;
-
-    &__my-list {
-        .list {
-            margin: 10px;
-            min-width: 250px;
-        }
-
-        .my-community {
-            display: flex;
-            justify-content: space-between;
-            border: 2px solid gray;
-            margin: 5px;
-            padding: 10px;
-            border-radius: 5px;
-            text-align: center;
-
-            svg {
-                margin: 0 10px;
-            }
-
-            svg:hover {
-                cursor: pointer;
-                transform: scale(1.1);
-            }
-        }
-    }
+    flex-direction: column;
 
     &__list {
         display: flex;
@@ -35,6 +10,23 @@
         .title {
             display: flex;
             justify-content: center;
+            align-items: center;
+            margin: 10px 0;
+
+            .content {
+                display: flex;
+                justify-content: start;
+                width: 75%;
+            }
+
+            svg {
+                margin: 0 25px;
+            }
+
+            svg:hover {
+                cursor: pointer;
+                transform: scale(1.1);
+            }
         }
 
         ul {
@@ -43,6 +35,18 @@
 
             .community {
                 margin: 10px;
+
+                &__member {
+                    position: relative;
+                    display: flex;
+                    justify-content: end;
+                    z-index: 10;
+
+                    svg {
+                        position: absolute;
+                        margin: -5px;
+                    }
+                }
 
                 .card {
                     width: 250px;
